<resources>
    <string name="app_name">Express Book</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_bookings">Bookings</string>
    <string name="navigation_profile">Profile</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="nic_field">NIC or Passport Number</string>
    <string name="password_field">Enter your password</string>
    <string name="password_hint_field">Min 8 characters</string>
    <string name="nic_hint_field">xxxxxxxxxxx</string>
    <string name="register_now">Register Now</string>
    <string name="name_field">Name</string>
    <string name="name_hint_field">Amila Devin</string>
    <string name="email_field">Email</string>
    <string name="email_hint_field">example@gmail.com</string>
    <string name="contactNumber_field">Contact Number</string>
    <string name="contactNumber_hint_field">07xxxxxxxx</string>
    <string name="create_password_field">Create new password</string>
    <string name="retype_password_field">Re-type password</string>
    <string name="sign_in_label"></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_new_account">Create New Account</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit</string>
    <string name="deactivate">Deactive</string>
    <string name="logout">Log Out</string>
    <string name="start_station">Start Station</string>
    <string name="end_station">End Station</string>
    <string name="select_date">Select date</string>
    <string name="search">Search</string>
    <string name="train_schedule">Train Schedule</string>
    <string name="start_station_hint">Enter your start station</string>
    <string name="end_station_hint">Enter your end station</string>
    <string name="my_bookings">My Bookings</string>
    <string name="book_now">Book Now</string>
    <string name="request_agent">Request Agent</string>
    <string name="booking_hint">Enter number of tickets</string>
    <string name="book_train">Book Train</string>
    <string name="update">Update</string>
    <string name="forget_password">Forget Password</string>
</resources>