<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.exbook.activities.ui.home.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookings"
        android:name="com.exbook.activities.ui.bookings.BookingsFragment"
        android:label="@string/navigation_bookings"
        tools:layout="@layout/fragment_bookings" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.exbook.activities.ui.profile.ProfileFragment"
        android:label="@string/navigation_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>