<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activities.ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"

        android:weightSum="100">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/train_schedule"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            >

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="10dp"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView

                android:layout_width="wrap_content"
                android:paddingLeft="5dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/start_station"
                android:textSize="18sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/start_station_hint"
                android:id="@+id/from">

            </EditText>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/end_station"
                android:textSize="18sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/end_station_hint"
                android:id="@+id/to">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_gravity="center_vertical"
                    android:text="@string/select_date"
                    android:textSize="18sp"
                    android:paddingLeft="5dp">

                </TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:id="@+id/calender"
                    android:layout_height="50dp"
                    android:src="@drawable/calender"
                    android:layout_weight="2">

                </ImageView>
            </LinearLayout>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/search"
    android:text="@string/search"
    android:layout_gravity="center_horizontal"
    android:textAllCaps="false">

</Button>
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/trainList">

        </ListView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>