<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activities.BookingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_train"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginBottom="10dp"
            >

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:id="@+id/name"
                android:textSize="20dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:id="@+id/from"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:id="@+id/to"
                android:textSize="16dp">

            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="">

            </EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:id="@+id/price"
                android:textSize="16dp">

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2"
                android:layout_height="80dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/book"
                    android:text="@string/book_now"
                    android:layout_marginRight="5dp"
                    android:textAllCaps="false"
                    android:layout_weight="1"></Button>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/request"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="false"
                    android:text="@string/request_agent"
                    android:layout_weight="1"></Button>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>